--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 :root {
-    --cor-de-fundo: #d592f0;
- }
- 
- body {
-     background-color: var(--cor-de-fundo);
- }
+    --cor-de-fundo: #1caec2;
+}
 
- h1 {
-    background-color: rgb(224, 160, 243);
- }
+body {
+     background-color: var(--cor-de-fundo); 
+}
+
+h1 { 
+    background-color: rgb(238, 238, 238);
+}
