--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,46 @@
 :root {
-    --cor-de-fundo: #1caec2;
+    --cor-de-fundo: #6059a7;
+    --branco:   rgba(162, 168, 255, 0.514);
 }
 
 body {
      background-color: var(--cor-de-fundo); 
 }
 
+
 h1 { 
     background-color: rgb(238, 238, 238);
 }
+.cabeçalho {
+    background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
+
+    .container {
+        display: flex;
+        align-items: center;
+    }
+    .container__imagem{
+        padding: 1em;
+    }
+
+    .cabeçalho__menu-hamburguer {
+        width:  24px;
+        height: 24px;
+        background-image: url("../img/Menu.svg");
+        background-repeat: no-repeat;
+        background-position: center;
+        display: inline-block;
+    }
+
+.lista-menu{
+    display: none;
+}
+
+.container__botao:checked ~ .lista-menu {
+    display: block;
+}
+  
+
