--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,16 @@
 :root {
-    --cor-de-fundo: #929292;
-    --branco:   rgb(255, 255, 255);
-    --laranja: #868686;
-    --azul-degrade: linear-gradient(97.54deg, #424242 35.49%, #326589 165.37%);
+    --cor-de-fundo: #bd80cf;
+    --branco:   rgb(170, 101, 187);
+    --laranja: #000000;
+    --azul-degrade: linear-gradient(97.54deg, #000000 35.49%, #326589 165.37%);
+    --fonte-principal: “Poppins”;
 }
 
 body {
      background-color: var(--cor-de-fundo); 
+     font-family: var(--fonte-principal), sans-serif;
+     font-size: 16px;
+    font-weight: 400;
 }
 
 
@@ -46,6 +50,7 @@ h1 {
 
 .lista-menu__titulo {
     color: var(--laranja);
+    font-weight: 700;
 }
 
 .lista-menu__link {
@@ -66,4 +71,6 @@ h1 {
     display: block;
 }
   
-
+.container__botao{
+    display: none;
+}
