--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+@import url(styles/banner.css);
+@import url(styles/header.css);
+
 :root {
     --cor-de-fundo: #bd80cf;
     --branco:   rgb(170, 101, 187);
@@ -11,66 +14,4 @@ body {
      font-family: var(--fonte-principal), sans-serif;
      font-size: 16px;
     font-weight: 400;
-}
-
-
-h1 { 
-    background-color: rgb(255, 255, 255);
-}
-.cabeçalho {
-    background-color: var(--branco);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    }
-
-    .container {
-        display: flex;
-        align-items: center;
-    }
-    .container__imagem{
-        padding: 1em;
-    }
-
-    .cabeçalho__menu-hamburguer {
-        width:  24px;
-        height: 24px;
-        background-image: url("../img/Menu.svg");
-        background-repeat: no-repeat;
-        background-position: center;
-        display: inline-block;
-    }
-
-.lista-menu{
-    display: none;
-    position: absolute;
-    top: 100%;
-}
-
-.lista-menu__titulo {
-    color: var(--laranja);
-    font-weight: 700;
-}
-
-.lista-menu__link {
-    background: var(--azul-degrade);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-transform: uppercase;
-    }
-
-    .lista-menu__titulo,
-    .lista-menu__item {
-    padding: 1em;
-    background-color: var(--branco);
-}
-
-.container__botao:checked ~ .lista-menu {
-    display: block;
-}
-  
-.container__botao{
-    display: none;
 }
